<resources>
    <string name="app_name">ChakraMeditApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chakra1">چاکرای ریشه : چاکرای اول ما را به دنیای مادی و روح مادر
زمین متصل می کند. فعالیت درست چاکرا باعث دستیابی
راحت به اهدافتان خواهد شد.
چاکرای اول فعال به رنگ سرخ آتشین می درخشد و عنصر
آن زمین است.
چاکرای مولادهارا به نماد لوتوس چهار گلبرگی است.
    </string>
    <string name="chakra2">چاکرای خاجی : چاکرای دوم مرکز احساسات و روابط فردی ما بخصوص با جنس مخالف می‌باشد.
چاکرای دوم فعال به رنگ پرتقالی می درخشد و عنصر آن آب است.
چاکرای سوادهیستانا به نماد لوتوس شش گلبرگی است.
    </string>
    <string name="chakra3">چاکرای خورشیدی: این چاکرا به عنوان مرکز خواسته های ما شناخته شده و با فعالیت آن هویت اجتماعی‌مان را ثبات می‌بخشیم و میل به موفقیت بالا می رود.
چاکرای سوم فعال به رنگ زرد طلایی می درخشد و عنصر آن آتش است.
چاکرای مانیپورا به نماد لوتوس ده گلبرگی است.</string>

    <string name="chakra4">چاکرای قلب: این چاکرا مرکز تمام سیستم چاکرا است. سه مرکز احساسی و فیزیکی تحتانی را به سه مرکز معنوی و ذهنی فوقانی متصل می کند.
چاکرای چهارم نقش دستیابی به یگانگی کامل از طریق عشق است و به رنگ سبز و صورتی و طلایی می درخشد.
چاکرای آناهاتا به نماد لوتوس دوازده گلبرگی است.</string>

    <string name="chakra5">چاکرای گلو: چاکرای پنجم مرکز ظرفیت ابراز، ارتباط و الهام است. با چاکرای گلوی باز، احساسات، افکار و دانش درونی‌تان را آزادانه و بدون ترس ابراز می‌کنید.
چاکرای پنجم به رنگ آبی کم‌رنگ مایل به نقره‌ای می درخشد.
چاکرای ویشودها به نماد لوتوس شانزده گلبرگی است.</string>

    <string name="chakra6">چاکرای چشم سوم: چاکرای ششم جایگاه نیروهای ذهنی متعالی‌ مان، ظرفیت تمیز ذهنی‌مان، خاطره و اراده‌مان است. در چاکرای چشم باز می‌توانیم به دانش‌هایی به شکل شهود، غیب گویی، یک سری از اصوات یا احساس فوق حساس به ما می‌رسد. چاکرای آجنا به رنگ نیلی می درخشد و به نماد لوتوس ۹۶ گلبرگی است.</string>

<string name="chakra7">چاکرای تاج: چاکرای هفتم زمانی که شکوفا شود تمام‌ انسداد های باقیمانده در شش چاکرای دیگر برطرف شده و انرژی‌هایشان در بالاترین فرکانس‌های ممکن می لرزند. در این چاکرا در بالاترین سطح بودن خود قرار می‌گیریم.
چاکرای هفتم به رنگ بنفش، سفید و طلایی می‌درخشد.
چاکرای ساهاسرارا به نماد لوتوس هزار گلبرگی است.
</string>

</resources>