<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BookFragment">


    <ScrollView
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="35dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="اطلاعات چاکراها" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_margin="5dp"
                        android:text="@string/chakra1"
                        android:textSize="14dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/muladhara1" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/chakra2"
                        android:textSize="14dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/svadhishthana2" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/chakra3"
                        android:textSize="14dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/manipura3" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/chakra4"
                        android:textSize="14dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/anahata4" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/chakra5"
                        android:textSize="14dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/vishuddha5" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/chakra6"
                        android:textSize="14dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/ajna6" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/chakra7"
                        android:textSize="14dp" />

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/sahasrara7" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>